<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手持式</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_tab_manageDepot">库存管理</string>
    <string name="btn_tab_manageDispatch">收发管理</string>
    <string name="btn_tab_manageDepair">修理管理</string>
    <string name="btn_tab_manageDngine">动力管理</string>
    <string name="btn_head_back">返回</string>
    <string name="txt_head_title">标题</string>
    <string name="txt_head_menu">菜单</string>
    <string name="btn_depot_locate">货位</string>
    <string name="btn_depot_airMaterials">航材</string>
    <string name="btn_depot_batch">批次</string>
    <string name="btn_depot_bookKeeper">电子账本</string>
    <string name="btn_depot_labelLocate">货位标签</string>
    <string name="btn_depot_distributionInventory">库存分布</string>
    <string name="btn_dispatch_airMaterialsOut">航材出库</string>
    <string name="btn_dispatch_airMaterialsEnter">航材入库</string>
    <string name="txt_dispatch_EnterTime">入库时间</string>
    <string name="txt_dispatch_OutTime">出库时间</string>
    <string name="txt_dispatch_EnterNum">入库单号</string>
    <string name="txt_dispatch_OutNum">出库单号</string>
    <string name="txt_dispatch_EnterState">状态</string>
    <string name="btn_engine_out">发动机出库</string>
    <string name="btn_engine_enter">发动机入库</string>
    <string name="btn_engine_batchMaintain">批次维护</string>
    <string name="btn_repair_awaitingRepairEnter">待修理航材入库</string>
    <string name="btn_repair_awaitingRepairOut">待修理航材出库</string>
    <string name="txt_login_username">用户名:</string>
    <string name="txt_login_password">密    码:</string>
    <string name="txt_login_title">管理员登陆</string>
    <string name="txt_login_remeberMe">        记住密码</string>
    <string name="btn_login_ok">登陆</string>
    <string name="btn_login_cancel">取消</string>

</resources>