<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/head_bg"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/tab_DepotFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:text="@string/btn_tab_manageDepot"
        android:textSize="14sp" />

    <Button
        android:id="@+id/tab_DispatchFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:text="@string/btn_tab_manageDispatch"
        android:textSize="14sp" />

    <Button
        android:id="@+id/tab_RepairFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:text="@string/btn_tab_manageDepair"
        android:textSize="14sp" />

    <Button
        android:id="@+id/tab_EngineFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:text="@string/btn_tab_manageDngine"
        android:textSize="14sp" />

</LinearLayout>