<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/engine_enter_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/btn_engine_enter"
            android:textSize="20sp" />

        <Button
            android:id="@+id/engine_out_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/btn_engine_out"
            android:textSize="20sp" />

        <Button
            android:id="@+id/engine_batchMaintain_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/btn_engine_batchMaintain"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>